fix(ui): center pagination on mobile & fix pokemon stat tooltip overflow

--- a/ui/src/app/shared/components/team/team-table/team-table.component.scss
+++ b/ui/src/app/shared/components/team/team-table/team-table.component.scss
@@ -99,7 +99,7 @@
   align-items: center;
   justify-items: center;
   align-self: flex-end;
-  
+  justify-content: center
 }
 
 .loader-wrapper
